dark mode only in control atm. Fix button colours. Add padding to media table.

--- a/pkg/piplayer/assets/css/control.css
+++ b/pkg/piplayer/assets/css/control.css
@@ -8,6 +8,11 @@ td {
   padding: 1.2rem .5rem;
 }
 
+
+tr {
+  padding-left: 10px;
+}
+ 
 .selected {
   color: white;
   background-color: #eba13a;
